fix: close cross on toast is invisible with dark theme

--- a/vrc-get-gui/app/globals.css
+++ b/vrc-get-gui/app/globals.css
@@ -79,9 +79,9 @@
 		@apply bg-background text-foreground;
 		color: hsl(var(--foreground));
 		background: linear-gradient(
-						to bottom,
-						transparent,
-						hsl(var(--background-end))
+				to bottom,
+				transparent,
+				hsl(var(--background-end))
 		) hsl(var(--background-start));
 	}
 }
@@ -154,5 +154,9 @@ body {
 
 	.Toastify__toast {
 		box-shadow: 0 4px 12px hsl(var(--primary) / 0.05);
+	}
+
+	.Toastify__close-button--light {
+		color: hsl(var(--foreground));
 	}
 }
